[package]
name = "gitdentity"
version = "1.0.0"
authors = ["BlyatManGopnik <emailforsurveys420@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.24.2"
dirs = "3.0.1"
promptly = "0.3.0"
git-config = "0.1.0"
