[package]
name = "gitdentity"
version = "1.0.2"
authors = ["BlyatManGopnik <emailforsurveys420@gmail.com>"]
edition = "2018"
description = "Git identity changer"
repository = "https://github.com/BlyatManGopnik/gitdentity"
keywords = ["git", "identity", "cli", "sqlite"]
license = "GPL-3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.24.2"
dirs = "3.0.1"
promptly = "0.3.0"
git-config = "0.1.0"

[features]
bundled = ["rusqlite/bundled"]
